add payment form

--- a/app/views/managers/new.html.erb
+++ b/app/views/managers/new.html.erb
@@ -157,8 +157,8 @@
 						<% else %>
 						<div>
 						
-							<label class="radio-inline "></label>
-								<input type="radio" class="col-sm-3" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+							<label class="radio-inline ">
+								<input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
 								One Time Payment </label>
 							<label class="radio-inline">
 								<input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
