--- a/app/views/managers/new.html.erb
+++ b/app/views/managers/new.html.erb
@@ -36,7 +36,7 @@
 		};
 		Stripe.card.createToken(card, stripeResponseHandler);
 	})
-	
+
 </script>
 
 <h2>Sign up</h2>
@@ -47,165 +47,108 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="form-horizontal">
-					<div>
-						
-						<h4>Step 1: Your Information</h4>
-						<%= form_for @manager,:html=>{:id=>"card_form"} do |f| %>
-						<div class="clr"></div>
-						<% if @manager.errors.any? %>
-						<ul class="alert fade in alert-error">
-							<% @manager.errors.full_messages.each do |msg| %>
-							<li>
-								<%= msg %>
-							</li>
-							<% end %>
-						</ul>
-						<% end %>
-						
-						<div class="form-group">
-							<label for="first_name" class="col-sm-2 control-label">First Name</label>
-							<div class="col-sm-3">
-							<%= f.text_field :first_name, :required => true, :class=>"form-control" %>
-							</div>
-							
-						</div>
-						<div class="form-group">
-							<label for="last_name" class="col-sm-2 control-label">Last Name</label>
-							<div class="col-sm-3">
-								<%= f.text_field :last_name, :required => true,:class=>"form-control" %>
-							</div>
-							
-						</div>
-						
-
-						<%= f.fields_for :user do |u| %>
-						<%= u.hidden_field :stripe_token %>
-						<div class="form-group">
-							<%= u.hidden_field :name, :value => "name" %>
-
-						</div>
-
-						<div class="form-group">
-							<label for="email" class="col-sm-2 control-label">Email</label>
-							<div class="col-sm-3">
-								<%= u.email_field :email, :required => true, :class=>"form-control" %>
-							</div>
-						</div>
-
-						<div class="form-group">
-							<label for="password" class="col-sm-2 control-label">Password</label>
-							<div class="col-sm-3">
-								<%= u.password_field :password, :required => true,:class=>"form-control" %>
-							</div>
-	
-						</div>
-						<div class="form-group">
-							<label for="confirm_password" class="col-sm-2 control-label">Confirm Password</label>
-							<div class="col-sm-3">
-								<%= u.password_field :password_confirmation,:class=>"form-control", :required => true %>
-							</div>
-						</div>
-
-						<% end %>
-						<div class="form-group">
-                      
-							<label class="radio-inline">
-								<%= f.radio_button :gender, "male" %>
-								Male </label>
-							<label class="radio-inline">
-								<%= f.radio_button :gender, "female" %>
-								Female </label>
-						</div>
-
-					</div>
-					<div>
-						<h4>Step 2: Company Information</h4>
-
-						<div class="form-group">
-							<label for="company_name" class="col-sm-2 control-label"> Name</label>
-							<div class="col-sm-3">
-								<%= f.text_field :company_name, :required => true, :class=>"form-control" %>
-							</div>
-						</div>
-						<div class="form-group">
-							<label for="company_phone" class="col-sm-2 control-label">Phone</label>
-							<div class="col-sm-3">
-								<%= f.text_field :company_phone, :class=>"form-control" %>
-							</div>
-						</div>
-
-						<br/>
-						<div class="form-group">
-							<label for="company_email" class="col-sm-2 control-label">Company Email</label>
-							<div class="col-sm-3">
-								<%= f.email_field :company_email, :required => true,:class=>"form-control" %>
-							</div>
-							
-							<!-- <input type="text" class="form-control" id="exampleInputPassword2" placeholder="Login Url"> -->
-						</div>
-						<br/>
-						<!-- <b>**Every account has its own url. This is where you and your employee go to log in</b> -->
-
-					</div>
-
-					<div>
-						<h4>Step 3: Payment Confirmation</h4>
-						<% if @user.stripe_token %>
-						<p>
-							Credit card acceptance is pending.
-						</p>
-						<% else %>
 						<div>
+
+							<h4>Step 1: Your Information</h4>
+							<%= form_for @manager,:html=>{:id=>"card_fform"} do |f| %>
+							<div class="clr"></div>
+							<% if @manager.errors.any? %>
+							<ul class="alert fade in alert-error">
+								<% @manager.errors.full_messages.each do |msg| %>
+								<li>
+									<%= msg %>
+								</li>
+								<% end %>
+							</ul>
+							<% end %>
+
+							<div class="form-group">
+								<label for="first_name" class="col-sm-2 control-label">First Name</label>
+								<div class="col-sm-3">
+									<%= f.text_field :first_name, :required => true, :class=>"form-control" %>
+								</div>
+
+							</div>
+							<div class="form-group">
+								<label for="last_name" class="col-sm-2 control-label">Last Name</label>
+								<div class="col-sm-3">
+									<%= f.text_field :last_name, :required => true,:class=>"form-control" %>
+								</div>
+
+							</div>
+
+							<%= f.fields_for :user do |u| %>
+							<%= u.hidden_field :stripe_token %>
+							<div class="form-group">
+								<%= u.hidden_field :name, :value => "name" %>
+
+							</div>
+
+							<div class="form-group">
+								<label for="email" class="col-sm-2 control-label">Email</label>
+								<div class="col-sm-3">
+									<%= u.email_field :email, :required => true, :class=>"form-control" %>
+								</div>
+							</div>
+
+							<div class="form-group">
+								<label for="password" class="col-sm-2 control-label">Password</label>
+								<div class="col-sm-3">
+									<%= u.password_field :password, :required => true,:class=>"form-control" %>
+								</div>
+
+							</div>
+							<div class="form-group">
+								<label for="confirm_password" class="col-sm-2 control-label">Confirm Password</label>
+								<div class="col-sm-3">
+									<%= u.password_field :password_confirmation,:class=>"form-control", :required => true %>
+								</div>
+							</div>
+
+							<% end %>							
+
+						</div>
+						<div>
+							<h4>Step 2: Company Information</h4>
+
+							<div class="form-group">
+								<label for="company_name" class="col-sm-2 control-label"> Name</label>
+								<div class="col-sm-3">
+									<%= f.text_field :company_name, :required => true, :class=>"form-control" %>
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="company_phone" class="col-sm-2 control-label">Phone</label>
+								<div class="col-sm-3">
+									<%= f.text_field :company_phone, :class=>"form-control" %>
+								</div>
+							</div>
+
+							<br/>
+							<div class="form-group">
+								<label for="company_email" class="col-sm-2 control-label">Company Email</label>
+								<div class="col-sm-3">
+									<%= f.email_field :company_email, :required => true,:class=>"form-control" %>
+								</div>
+
+								<!-- <input type="text" class="form-control" id="exampleInputPassword2" placeholder="Login Url"> -->
+							</div>
+							<br/>
+							<!-- <b>**Every account has its own url. This is where you and your employee go to log in</b> -->
+
+						</div>
 						
-							<label class="radio-inline "></label>
-								<input type="radio" class="col-sm-3" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-								One Time Payment </label>
-							<label class="radio-inline">
-								<input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-								Monthly Recuring Payment </label>
-
-						</div>
-
-						<div class="form-group">
-							<label for="credit_card_no" class="col-sm-2 control-label">Card No.</label>
-							<div class="col-sm-3">
-								<input type="text" class="form-control" id="card_number">
-							</div>
-						</div>
-						<div class="form-group">
-							<label for="cvv_no" class="col-sm-2 control-label">Cvv No.</label>
-							<div class="col-sm-3">
-								<input type="email" class="form-control" id="code" >
-							</div>
-						</div>
-						<br/>
-						<div class="form-group">
-							<label for="month" class="col-sm-2 control-label">Month</label>
-							<div class="col-sm-3">
-								<input type="text" size="2" class="form-control" id="month"/>
-							</div>
-						</div>
-						<div class="form-group">
-							<label for="Year" class="col-sm-2 control-label">Year</label>
-							<div class="col-sm-3">
-								<input type="text" size="4" class="form-control" id="year"/>
-							</div>
-							<!-- <input type="text" class="form-control"  placeholder="Expairy Date" id="datepicker" /> -->
-						</div>
-
 					</div>
-					<%end%>
-
-				</div>
 				</div>
 				<br/>
 				<b>By clicking create my account, you are agree to the terms of service and privacy policy</b>
 				<br/>
 
-				<button type="button" class="btn btn-primary" id="manager_register">
-					Sign up
-				</button>
-				<!-- <button type="button" class="btn btn-primary">Create Account</button> -->
+				<!-- <button type="button" class="btn btn-primary" id="manager_registers">
+				Sign up
+				</button> -->
+				<%= f.submit 'Create Account',:class=>"btn btn-primary"%>
+				<!-- <button type="button" >Create Account</button> -->
 			</div>
 
 		</div>
