change time diff

--- a/app/views/employees/shift.html.erb
+++ b/app/views/employees/shift.html.erb
@@ -23,7 +23,8 @@
 				'shift[longitude]': longi, 
 				'shift[employee_id]': emp_id,
 				'shift[start_time]':"",
-				'shift[date]':""
+				'shift[date]':"",
+				'shift[status]':"checked in"
 				
 			}			
 			$("#ip").html(lati);
