--- a/app/views/managers/new.html.erb
+++ b/app/views/managers/new.html.erb
@@ -106,13 +106,13 @@
 							</div>
 
 							<% end %>
-							<div class="form-group">
+							<!-- <div class="form-group">
 
 								<label class="radio-inline"> <%= f.radio_button :gender, "male" %>
 									Male </label>
 								<label class="radio-inline"> <%= f.radio_button :gender, "female" %>
 									Female </label>
-							</div>
+							</div> -->
 
 						</div>
 						<div>
